--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,4 +11,11 @@ layout: default
   <div class="post-content">
     {{ content }}
   </div>
+  <script src="https://utteranc.es/client.js"
+        repo="KENGXKENG/KENGXKENG.github.io"
+        issue-term="pathname"
+        theme="github-dark"
+        crossorigin="anonymous"
+        async>
+</script>
 </article>
